(library
 ((name        dune)
  (libraries   (unix
                stdune
                fiber
                xdg
                re
                opam_file_format
                usexp
                ocaml_config))
  (synopsis    "Internal Dune library, do not use!")))

(ocamllex (meta_lexer glob_lexer dune_lexer))

(rule
 ((targets (setup.ml))
  (mode    fallback)
  (action  (copy# setup.defaults.ml setup.ml))))

(rule
 ((targets (string_patterns.ml))
  (deps    ((glob_files *.ml)))
  (action  (with-stdout-to ${@}
            (run tools/extract_string_patterns.exe ${^})))))
